--- a/documents/funciones.html
+++ b/documents/funciones.html
@@ -28,6 +28,21 @@ function sumar(a, b) {
 // Función de flecha equivalente
 const sumar = (a, b) => a + b;</code></pre>
         </article>
+
+        <button type="button" class="collapsible">
+          <h2>Funciones anónimas</h2>
+        </button>
+        <article class="content">
+          <pre><code>// Sintaxis de expresión de función anónima
+const miFuncion = function(parametro1, parametro2) {
+  // Cuerpo de la función
+  // Puedes hacer algo con los parámetros aquí
+  console.log(parametro1 + parametro2);
+};
+            
+// Llamada a la función anónima
+miFuncion(3, 4); // Salida: 7</code></pre>
+        </article>
       </section>
     </main>
   </body>
